# laravel-mcp-companion

./: .coverage  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  content_aggregators.py  coverage.xml  docs_updater.py  example_client.py  laravel_docs_server.py  laravel_mcp_companion.py  learning_resources.py  main.py  mcp_tools.py  navigation_engine.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  shutdown_handler.py  smithery.yaml  test_docker_args.sh  toon_helpers.py
.github/workflows/: ci.yaml  docs-update.yaml  release-docs-update.yaml  release.yaml
.harness/: Build_brianirish_laravel_mcp_companion_1766181823421-pr-trigger-input-set-1766181825412.yaml  Build_brianirish_laravel_mcp_companion_1766181823421-push-trigger-input-set-1766181826771.yaml  ci-pr-input-set.yaml  ci-push-input-set.yaml  release-tag-input-set.yaml
.harness/pipelines/: ci.yaml  laravel-mcp-companion-1766181810995.yaml  release.yaml
data/learning_resources/: metadata.json
docs/: .versions_cache.json  conference_talk_aggregator.md
docs/.metadata/: sync_info.json
docs/13.x/: ai-sdk.md  artisan.md  authentication.md  billing.md  boost.md  broadcasting.md  cache.md  collections.md  container.md  contributions.md  http-client.md  http-tests.md  installation.md  mail.md  mcp.md  migrations.md  prompts.md  queues.md  sanctum.md  scout.md  starter-kits.md  strings.md  validation.md  vite.md
scripts/: populate_learning_resources.py
tests/: __init__.py  conftest.py  test_community_packages.py  test_conference_talk_aggregator.py  test_learning_resources.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_complete_workflows.py
tests/protocol/: __init__.py  test_mcp_compliance.py
tests/unit/: __init__.py  test_asset_filtering.py  test_cache_management.py  test_content_validation.py  test_docker_args.py  test_docs_updater.py  test_fuzzy_search.py  test_laravel_mcp_companion_integration.py  test_laravel_mcp_companion_main.py  test_laravel_mcp_companion_mcp.py  test_laravel_mcp_tools.py  test_learning_resources.py  test_mcp_tool_functions.py  test_package_fetchers.py  test_runtime_version.py  test_security.py  test_shutdown_handler.py  test_spatie_stats_filtering.py  test_toon_helpers.py
(+36 files in other folders)
