[project]
name = "laravel-mcp-companion"
version = "0.8.20"
description = "A Laravel developer's MCP companion. Get the absolute best advice, recommendations, and up-to-date documentation for the entire Laravel ecosystem."
authors = [{name = "Brian Irish", email = "irishb@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "uvicorn>=0.30.0",
    "starlette>=0.50.0",
    "toon-format @ git+https://github.com/toon-format/toon-python.git"
]
keywords = ["laravel", "mcp", "documentation", "ai", "modelcontextprotocol", "php", "companion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Repository = "https://github.com/brianirish/laravel-mcp-companion"
Issues = "https://github.com/brianirish/laravel-mcp-companion/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=laravel_mcp_companion",
    "--cov=docs_updater", 
    "--cov=shutdown_handler",
    "--cov=mcp_tools",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "network: marks tests that require network access",
    "external: marks tests that interact with external services"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.3",
]
